--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'idea'
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "com.diffplug.spotless" version "5.9.0"
 }
 
 apply from: 'codemetrics.gradle'
@@ -23,5 +24,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy spotlessApply
     finalizedBy jacocoTestReport
 }
