--- a/codemetrics.gradle
+++ b/codemetrics.gradle
@@ -12,3 +12,21 @@ jacocoTestReport {
         html.destination file("${buildDir}/reports/jacoco")
     }
 }
+
+spotless {
+    java {
+        importOrder()
+        removeUnusedImports()
+        googleJavaFormat()
+        toggleOffOn()
+    }
+    format 'misc', {
+        // define the files to apply `misc` to
+        target '*.gradle', '*.md', '.gitignore'
+
+        // define the steps to apply to those files
+        trimTrailingWhitespace()
+        indentWithTabs()
+        endWithNewline()
+    }
+}
