--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,26 @@
 plugins {
     id 'java'
     id 'idea'
+    id 'maven-publish'
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id "com.diffplug.spotless" version "5.9.0"
+    id 'com.diffplug.spotless' version '5.9.0'
 }
 
 apply from: 'codemetrics.gradle'
 
 group = 'com.yonatankarp'
-version = '0.0.1-SNAPSHOT'
+version "${version}"
 sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    enabled = true
+    archivesBaseName = project.name
+    version = project.version
 }
 
 dependencies {
@@ -26,4 +33,23 @@ test {
     useJUnitPlatform()
     finalizedBy spotlessApply
     finalizedBy jacocoTestReport
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/yonatankarp/springboot-rabbitmq-retry-queues")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+//            from(components.java)
+            artifact bootJar
+        }
+    }
 }
