--- a/codemetrics.gradle
+++ b/codemetrics.gradle
@@ -18,6 +18,8 @@ spotless {
 		importOrder()
 		removeUnusedImports()
 		googleJavaFormat()
+		indentWithTabs(2)
+		indentWithSpaces(4)
 		toggleOffOn()
 	}
 	format 'misc', {
@@ -26,7 +28,8 @@ spotless {
 
 		// define the steps to apply to those files
 		trimTrailingWhitespace()
-		indentWithTabs()
+		indentWithTabs(2)
+		indentWithSpaces(4)
 		endWithNewline()
 	}
 }
