--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'org.springframework.boot' version '2.4.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'com.diffplug.spotless' version '5.11.0'
+	id "io.freefair.lombok" version "5.3.0"
 }
 
 ext {
@@ -27,10 +28,16 @@ jar {
 	version = project.version
 }
 
+bootJar {
+	enabled = false
+}
+
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-amqp:$springBootVersion"
 
-	testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
+	testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}") {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 test {
@@ -51,16 +58,8 @@ publishing {
 		}
 	}
 	publications {
-		gpr(MavenPublication) {
-			artifact bootJar
-			versionMapping {
-				usage('java-runtime') {
-					fromResolutionResult()
-				}
-			}
-		}
 		maven(MavenPublication) {
-			artifact bootJar
+			from components.java
 			versionMapping {
 				usage('java-runtime') {
 					fromResolutionResult()
