--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ bootJar {
 }
 
 dependencies {
-	compile "org.springframework.boot:spring-boot-starter-amqp:$springBootVersion"
+	implementation "org.springframework.boot:spring-boot-starter-amqp:$springBootVersion"
 
 	testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}") {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
