--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-# This action should be triggered on any PR merge to our main branch
+name: Release
+
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 
 jobs:
   artifact:
@@ -10,36 +10,33 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [ rabbit-hole ]
+        artifact: [ rabbit-hole ]
+
     steps:
+
       - name: Install Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v2.4.0
         with:
           java-version: 11
           distribution: 'adopt'
 
-      - name: Git Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
+      - uses: actions/checkout@v2.4.0
 
-      - name: Get Release Tag
-        id: previoustag
-        uses: WyriHaximus/github-action-get-previous-tag@v1.1
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::$(git describe --tags | cut -d- -f 1)
 
       - name: Set Artifact Version
         run: |
-          echo Artifact version: ${{ steps.previoustag.outputs.tag }}
-          echo "version=${{ steps.previoustag.outputs.tag }}" > gradle.properties
+          echo Artifact version: ${{ steps.get_version.outputs.VERSION }}
+          echo "version=${{ steps.get_version.outputs.VERSION }}" > gradle.properties
 
-      - name: Gradle Build Artifact
-        id: build
+      - name: Build Artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew ${{ matrix.service }}:build
+        run: ./gradlew ${{ matrix.artifact }}:build
 
       - name: Publish Artifact
-        id: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew ${{ matrix.service }}:publish
+        run: ./gradlew ${{ matrix.artifact }}:publish
