--- a/demo-app/build.gradle
+++ b/demo-app/build.gradle
@@ -20,6 +20,7 @@ bootJar {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         name = "Rabbit Hole"
@@ -35,7 +36,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
-    implementation "com.yonatankarp:rabbit-hole:+"
+    implementation "com.yonatankarp:rabbit-hole:0.0.0+"
 
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
