Fix demo-app compilation

--- a/demo-app/build.gradle
+++ b/demo-app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
-    implementation "com.yonatankarp:rabbit-hole:0.0.0+"
+    implementation "com.yonatankarp:rabbit-hole:+"
 
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
