--- a/rabbit-hole/build.gradle
+++ b/rabbit-hole/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id "maven-publish"
     id "org.springframework.boot"
     id "io.spring.dependency-management"
-    id "io.freefair.lombok"
     id "com.diffplug.spotless"
 }
 
@@ -26,7 +25,8 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
+    testImplementation group: 'io.mockk', name: 'mockk', version: '1.12.1'
+
 }
 
 build {
