--- a/demo-app/build.gradle
+++ b/demo-app/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id "java"
+    id "org.jetbrains.kotlin.jvm"
+    id "org.jetbrains.kotlin.plugin.allopen"
     id "jacoco"
     id "org.springframework.boot"
     id "io.spring.dependency-management"
-    id "io.freefair.lombok"
     id "com.diffplug.spotless"
 }
 
@@ -33,6 +34,7 @@ repositories {
 }
 
 dependencies {
+    implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jdk8"
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
@@ -51,4 +53,8 @@ test {
     useJUnitPlatform()
     finalizedBy spotlessApply
     finalizedBy jacocoTestReport
+}
+
+allOpen {
+    annotation("org.springframework.context.annotation.Configuration")
 }
