--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,6 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: "./build/reports/jacoco/jacocoTestReport.xml"
-
   dependabot_auto_merge:
     if: ${{ github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-latest
@@ -70,7 +69,7 @@ jobs:
         if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-minor' ||
                 steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
         # Approving the PR and waiting for 5 sec to let GitHub UI to reflect the changes
-        run: gh pr review --approve "$PR_URL" && sleep 5
+        run: gh auth login && gh pr review --approve "$PR_URL" && sleep 5
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.REVIEWER_GITHUB_TOKEN }}
