--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,16 +7,16 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
     labels:
-      - "type: dependency-upgrade"
-      - "relates-to: build"
+      - "dependencies"
+      - "build"
 
   # Maintain dependencies for Gradle
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
     labels:
-      - "type: dependency-upgrade"
-      - "relates-to: build"
+      - "dependencies"
+      - "build"
