--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -12,16 +12,16 @@ jobs:
     steps:
       - name: Checkout PR
         if: ${{ github.event_name != 'pull_request_target' }}
-        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
         with:
           fetch-depth: 0
 
       - name: Update Gradle Wrapper
-        # WARN: as this action comes from the org without public members and it has relatively few "stars",
-        # so this specific SHA passed #infosec review from SumUp. Please do NOT upgrade this version unless
-        # it is incompatible with our build - then we'll have to review the version diff.
+        # **WARN**: as this action comes from the org without public members,
+        # and it has relatively few "stars", so this specific SHA passed #infosec
+        # review from SumUp. Please do NOT upgrade this version unless it is
+        # incompatible with our build - then we'll have to review the version
+        # diff.
         uses: gradle-update/update-gradle-wrapper-action@981c551b17dbcf1940b1b4435afdb79babb7c13a
-        env:
-          POS_PACKAGES_READ_TOKEN: ${{ secrets.CATALOG_BOT_READ_PACKAGE_GH_TOKEN }}
         with:
           repo-token: ${{ secrets.REVIEWER_GITHUB_TOKEN }}
